--- a/PI/report/slides/presentation.tex
+++ b/PI/report/slides/presentation.tex
@@ -46,7 +46,7 @@
 \begin{frame}[plain]
 	\frametitle{Convexion-Diffusion}
 	\begin{description}
-		\item [What?]Simulates the way heat is transfered in a fluid;
+		\item [What?]Simulates the way heat is transfered in a spread of a fluid;
 		\item [How?] Uses finite-volumes method;
 		\item [Why?] Represents surface as a mesh, making each cell only dependent of its neighbours;
 	\end{description}
@@ -207,7 +207,7 @@
 
 \begin{frame}
 	\frametitle{Achieved Results}
-		
+
 \end{frame}
 
 
