--- a/PI/report/slides/presentation.tex
+++ b/PI/report/slides/presentation.tex
@@ -7,8 +7,10 @@
 \usepackage[retainorgcmds]{IEEEtrantools}%	IEEEeqnarray
 \usepackage{mathabx}%	convolution symbol
 \usepackage{multi row}
-\usepackage{epstopdf}
 \usepackage{listings}
+
+\usepackage{epstopdf}
+
 \lstset{
 	language=c,
 	basicstyle=\footnotesize,
@@ -17,7 +19,7 @@
 }
 
 %	presentation info
-\title{Study and Optimization of a Finite Volume's Method Application}
+\title{Study and Optimization of a Finite-Volume Method Application}
 
 \author{José Alves, Rui Brito}
 
@@ -47,7 +49,7 @@
 	\frametitle{Convexion-Diffusion}
 	\begin{description}
 		\item [What?] Calculates the heat diffusion of a fluid while it spreads through an area;
-		\item [How?] Uses finite-volumes method;
+		\item [How?] Uses Finite-Volume method;
 		\item [Why?] Represents surface as a mesh, making each cell only dependent of its neighbours;
 	\end{description}
 \end{frame}
