--- a/PCP/presentation.tex
+++ b/PCP/presentation.tex
@@ -42,9 +42,14 @@
 \small
 \begin{frame}
 \begin{block}{Memory Bandwidth}
-	$Mem\_bandwidth = ((PAPI\_L2\_TCM) \times 64 \times 1 \times 10{-9}) / exec\_time$
-	$measured\_mem\_bandwidth = (8427602 \times 64 \times 1 \times 10^{-9})/0.88 = 0.6129 GB/s$\\
+	$Mem\_bandwidth = ((PAPI\_LLC\_TCM) \times 64 \times 1 \times 10{-9}) / exec\_time$
+	$measured\_mem\_bandwidth = (3826100 \times 64 \times 1 \times 10^{-9})/0.942194 = 0.2599 GB/s$\\
 	$System\_memory\_avail\_bandwidth = 14.8473 GB/s$
+\end{block}
+\begin{block}{Instructions per cycle}
+	$Total\ Instructions = 211932871$
+	$Number\ of\ cycles = 1548$
+	$Instruction\ per\ cycle = 136907$
 \end{block}
 As seen in the December presentation, conv-diff has some locality problems (has it can also be seen by the high number of L1 misses (14937146)).
 \end{frame}
@@ -96,6 +101,55 @@ As seen in the December presentation, conv-diff has some locality problems (has 
 			\item Workload distribution also isn't the biggest problem
 		\end{itemize}
 	\end{block}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+	
+	\begin{figure}[!htp]
+    \centering
+    \begin{minipage}[t]{\columnwidth}
+        \includegraphics[width=\textwidth]{images/parallel.eps}
+        \caption{Scalability of the parallel region (original implementation)}
+    \end{minipage}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}[fragile]
+	
+	\begin{figure}[!htp]
+    \centering
+    \begin{minipage}[t]{\columnwidth}
+        \includegraphics[width=\textwidth]{images/total.eps}
+        \caption{Total execution time (original implementation)}
+    \end{minipage}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}[fragile]
+	
+	\begin{figure}[!htp]
+    \centering
+    \begin{minipage}[t]{\columnwidth}
+        \includegraphics[width=\textwidth]{images/parallel_woat.eps}
+        \caption{Scalability of the parallel region (without atomic directive)}
+    \end{minipage}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}[fragile]
+	
+	\begin{figure}[!htp]
+    \centering
+    \begin{minipage}[t]{\columnwidth}
+        \includegraphics[width=\textwidth]{images/total_woat.eps}
+        \caption{Total execution time (without atomic directive)}
+    \end{minipage}
+\end{figure}
 
 \end{frame}
 
