--- a/PCP/presentation.tex
+++ b/PCP/presentation.tex
@@ -10,6 +10,7 @@
 \usepackage{epstopdf}
 \usepackage{listings}
 
+\setbeameroption{show notes}
 
 %	presentation info
 \title{Scalability Problems In Shared Memory}
@@ -41,6 +42,17 @@
 \subsection{}
 \small
 \begin{frame}
+\note{\textbf{Beat\\}}
+The OpenFoam Computational Fluid Dynamics (CFD) software package
+\begin{itemize}
+\item Highly Modular
+\item By scientists, for scientists
+\item Fluid dynamics problems, involving chemical reactions, turbulence and heat transfer
+\item Has many other applications
+\end{itemize}
+
+\note{Vender peixe, basicamente}
+\note[item]{Com alta modularidade entende-se que é composto por várias bibliotecas, e cada função da biblioteca pode ser aplicada a uma grande variedade de tipos de dados. E ser resolvido com solvers e esquemas diferentes}
 \begin{block}{Memory Bandwidth}
 	$Mem\_bandwidth = ((PAPI\_LLC\_TCM) \times 64 \times 1 \times 10{-9}) / exec\_time$
 	$measured\_mem\_bandwidth = (3826100 \times 64 \times 1 \times 10^{-9})/0.942194 = 0.2599 GB/s$\\
